# rust_os

./: Cargo.toml  build.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: framebuffer.rs  main.rs
