[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.5"
embedded-graphics = "0.8.1"
log = { version = "0.4.17", default-features = false }
bootloader-x86_64-common = "0.11.3"
conquer-once = { version = "0.4.0", default-features = false }